# YadroIntern

./: CMakeLists.txt  README.md
src/: ClubLogic.cpp  ClubLogic.h  Models.h  Time.cpp  Time.h  main.cpp
tests/: run_tests.py  testClubLogic.cpp  testTime.cpp
tests/data_input/: inout1.txt  input2.txt  input3.txt  input5.txt  input6.txt
tests/data_output/: expected0.txt  expected1.txt  expected2.txt  expected3.txt  expected4.txt  expected5.txt  expected6.txt
